--- a/Examen1T/app/src/main/res/values/strings.xml
+++ b/Examen1T/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="no_incremento">Debe definir un incremento numeral para el contador</string>
     <string name="no_match_password">La contraseña no coincide</string>
     <string name="registro_correcto">Se ha registrado al usuario</string>
+    <string name="emptyString">Debe introducir un email</string>
+    <string name="email_dont_match_pattern">El email no es válido</string>
 </resources>
